--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -3,5 +3,9 @@ $blue           : #2176C7;
 
 $font-primary: Merriweather, serif;
 $font-secondary: Bree Serif, serif;
+$cursive: Pacifico, cursive;
 
 $default-border-radius : 10px;
+
+$green : #5b9664;
+$purple : #66333f;
