--- a/public/foundation/scss/foundation/_settings.scss
+++ b/public/foundation/scss/foundation/_settings.scss
@@ -115,18 +115,21 @@ $include-html-global-classes: $include-html-classes;
 // $tuatara     : #444444;
 // $oil         : #333333;
 // $jet         : #222222;
-// $black       : #000000;
+ $black       : #000000;
+ $bluegrey : #a1aaba;
+ $purple : #66333f;
+ $green : #5b9664;
 
 // We use these as default colors throughout
 // $primary-color: #008CBA;
-// $secondary-color: #e7e7e7;
+ $secondary-color: rgba(231, 231, 231, 0.75);
 // $alert-color: #f04124;
 // $success-color: #43AC6A;
 // $warning-color: #f08a24;
 // $info-color: #a0d3e8;
 
 // We use these to control various global styles
-// $body-bg: $white;
+ $body-bg: $bluegrey;
 // $body-font-color: $jet;
 // $body-font-family: $font-family-sans-serif;
 // $body-font-weight: $font-weight-normal;
@@ -1381,7 +1384,7 @@ $include-html-global-classes: $include-html-classes;
 // $include-html-top-bar-classes: $include-html-classes;
 
 // Background color for the top bar
-// $topbar-bg-color: $oil;
+ $topbar-bg-color: $purple;
 // $topbar-bg: $topbar-bg-color;
 
 // Height and margin
