--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,6 +1,9 @@
 @import "compass";
-@import "compass/reset";
+/*@import "compass/reset";*/
+
 
 @import "variables";
 @import "mixins";
 @import "base";
+@import "imdb";
+@import "foundation";
